# hacks

./: .gitignore  backup.rb  dvd.txt  dvddb-import.txt  dvddb.py  euler.hs  i.erl  intmap.erl  mailcheck.rb  main.c  points.ods  remote-logger.sh  rip-simple.sh  rsnapshot.conf.tmpl  rsnapshot.sh  scan-for-uncommitted-changed.sh  timetrack.rb
projecteuler/: CMakeLists.txt  Makefile  bcd.c  eulerlib.c  eulerlib.erl  eulerlib.rb  fac.rb  p145.c  problem1.c  problem10.erl  problem12.erl  problem12.rb  problem122.erl  problem14.erl  problem145.cpp  problem145.rb  problem16.erl  problem17.erl  problem18.erl  problem2.c  problem220.erl  problem23.c  problem24.rb  problem25.erl  problem26.erl  problem26.rb  problem27.c  problem28.rb  problem29.erl  problem29.rb  problem3.c  problem3.erl  problem30.rb  problem31.prolog  problem32.c  problem32.erl  problem33.erl  problem34.c  problem34.erl  problem34.rb  (+30 more)
projecteuler/c/: problem145.cpp  problem2.c  problem21.c  problem23.c  problem32.c  problem4.c  problem71.c  problem73.c
projecteuler/erlang/: .project
projecteuler/erlang/src/: bsieve.erl  erlide-quirks.txt  eulerlib.erl  p21.erl  problem1.erl  problem10.erl  problem16.erl  problem2.erl  problem20.erl  problem3.erl  problem4.erl  problem41.erl  problem59.erl  problem63.erl  (+2 more)
projecteuler/files/: keylog.txt
projecteuler/haskell/: problem1.hs
projecteuler/prolog/: problem31.prolog  problem39.prolog
projecteuler/ruby/: eulerlib.rb  problem11.rb  problem26.rb  problem28.rb  problem30.rb  problem36.rb  problem43.rb  problem44.rb  problem46.rb  problem59.rb  problem63.rb
(+305 files in other folders)
